[tool.poetry]
name = "feecc-user-management"
version = "0.1.0"
description = ""
authors = ["arseniiarsenii <arseniivelichko2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
dnspython = "^2.1.0"
tabulate = "^0.8.9"
pymongo = "^3.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
